--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
         "@testing-library/react": "^12.1.3",
         "@testing-library/user-event": "^13.5.0",
         "react": "^17.0.2",
+        "axios": "^0.25.0",
+        "mobx": "^6.3.13",
+        "mobx-react-lite": "^3.2.3",
+        "react-loader-spinner": "^5.1.3",
+        "react-router-dom": "^6.2.1",
         "react-dom": "^17.0.2",
         "react-scripts": "5.0.0",
         "web-vitals": "^2.1.4"
@@ -16,7 +21,9 @@
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
-        "eject": "react-scripts eject"
+        "eject": "react-scripts eject",
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d build"
     },
     "eslintConfig": {
         "extends": [
@@ -35,5 +42,8 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
+    },
+    "devDependencies": {
+        "gh-pages": "^3.2.3"
     }
 }
